// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecretsApi createNewVersionOfSecret() 1: Create new version of existing secret: esv-frodo-test-secret2 - success 1`] = `
{
  "createDate": "2023-09-30T19:38:40.276Z",
  "loaded": false,
  "status": "ENABLED",
  "version": "4",
}
`;

exports[`SecretsApi createNewVersionOfSecret() 2: Create new version of non-existing secret: esv-does-not-exist - error 1`] = `[AxiosError: Request failed with status code 500]`;

exports[`SecretsApi deleteSecret() 1: Delete existing secret: esv-frodo-test-secret3 - success 1`] = `
{
  "_id": "esv-frodo-test-secret3",
  "activeVersion": "1",
  "description": "",
  "encoding": "generic",
  "lastChangeDate": "2023-09-30T19:38:31.605Z",
  "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
  "loaded": false,
  "loadedVersion": "",
  "useInPlaceholders": true,
}
`;

exports[`SecretsApi deleteVersionOfSecret() 1: Delete version 1 of secret: esv-frodo-test-secret2 - success 1`] = `
{
  "createDate": "2023-09-30T19:38:29.451Z",
  "loaded": false,
  "status": "DESTROYED",
  "version": "1",
}
`;

exports[`SecretsApi getSecret() 1: Get existing secret: esv-frodo-test-secret1 1`] = `
{
  "_id": "esv-frodo-test-secret1",
  "activeVersion": "3",
  "description": "Frodo Test Secret One Description",
  "encoding": "generic",
  "lastChangeDate": "2023-09-30T19:38:28.408Z",
  "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
  "loaded": false,
  "loadedVersion": "",
  "useInPlaceholders": true,
}
`;

exports[`SecretsApi getSecret() 2: Get non-existing secret: esv-does-not-exist 1`] = `[AxiosError: Request failed with status code 404]`;

exports[`SecretsApi getSecretVersions() 1: Get versions of existing secret: esv-frodo-test-secret1 1`] = `
[
  {
    "createDate": "2023-09-30T19:38:27.648Z",
    "loaded": false,
    "status": "ENABLED",
    "version": "3",
  },
  {
    "createDate": "2023-09-30T19:38:27.024Z",
    "loaded": false,
    "status": "DISABLED",
    "version": "2",
  },
  {
    "createDate": "2023-09-30T19:38:26.647Z",
    "loaded": false,
    "status": "ENABLED",
    "version": "1",
  },
]
`;

exports[`SecretsApi getSecretVersions() 2: Get versions of non-existing secret: esv-does-not-exist 1`] = `[AxiosError: Request failed with status code 404]`;

exports[`SecretsApi getSecrets() 1: Get all secrets - success 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": -1,
  "result": [
    {
      "_id": "esv-admin-token",
      "activeVersion": "1",
      "description": "Long-lived admin token",
      "encoding": "generic",
      "lastChangeDate": "2022-08-11T22:32:38.056Z",
      "lastChangedBy": "8efaa5b6-8c98-4489-9b21-ee41f5589ab7",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    {
      "_id": "esv-admin-token-1999386457729",
      "activeVersion": "1",
      "description": "Long-lived admin token",
      "encoding": "generic",
      "lastChangeDate": "2023-05-14T01:07:41.970Z",
      "lastChangedBy": "8d9723a9-a439-4cbf-beb4-30e52811789d",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    {
      "_id": "esv-frodo-test-secret1",
      "activeVersion": "3",
      "description": "Frodo Test Secret One Description",
      "encoding": "generic",
      "lastChangeDate": "2023-09-30T19:38:28.408Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
    {
      "_id": "esv-frodo-test-secret2",
      "activeVersion": "3",
      "description": "Frodo Test Secret Two Description",
      "encoding": "generic",
      "lastChangeDate": "2023-09-30T19:38:30.772Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
    {
      "_id": "esv-frodo-test-secret3",
      "activeVersion": "1",
      "description": "Frodo Test Secret Three Description",
      "encoding": "generic",
      "lastChangeDate": "2023-09-30T19:38:31.605Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
    {
      "_id": "esv-test-secret",
      "activeVersion": "2",
      "description": "Secret Value for testing",
      "encoding": "generic",
      "lastChangeDate": "2023-08-09T19:00:01.501Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "2",
      "useInPlaceholders": true,
    },
    {
      "_id": "esv-test-secret-1",
      "activeVersion": "1",
      "description": "test secret one",
      "encoding": "generic",
      "lastChangeDate": "2023-08-06T03:53:17.716Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  ],
  "resultCount": 7,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`SecretsApi getVersionOfSecret() 1: Get version 2 of existing secret: esv-frodo-test-secret1 1`] = `
{
  "createDate": "2023-09-30T19:38:27.024Z",
  "loaded": false,
  "status": "DISABLED",
  "version": "2",
}
`;

exports[`SecretsApi getVersionOfSecret() 2: Get version 2 of non-existing secret: esv-does-not-exist 1`] = `[AxiosError: Request failed with status code 500]`;

exports[`SecretsApi putSecret() 1: Create secret: esv-frodo-test-secret4 - success 1`] = `
{
  "_id": "esv-frodo-test-secret4",
  "activeVersion": "1",
  "description": "Frodo Test Secret Four Description",
  "encoding": "generic",
  "lastChangeDate": "2023-09-30T19:38:33.694Z",
  "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
  "loaded": false,
  "loadedVersion": "",
  "useInPlaceholders": true,
}
`;

exports[`SecretsApi setSecretDescription() 1: Set existing secret's description: esv-frodo-test-secret2 - success 1`] = `""`;

exports[`SecretsApi setStatusOfVersionOfSecret() 1: Disable version 2 of existing secret: esv-frodo-test-secret2 - success 1`] = `
{
  "createDate": "2023-09-30T19:38:29.846Z",
  "loaded": false,
  "status": "DISABLED",
  "version": "2",
}
`;

exports[`SecretsApi setStatusOfVersionOfSecret() 2: Disable version 2 of non-existing secret: esv-does-not-exist - error 1`] = `[AxiosError: Request failed with status code 404]`;
